--- a/src/python3_course_for_devs/notebooks/magic_method.ipynb
+++ b/src/python3_course_for_devs/notebooks/magic_method.ipynb
@@ -6,72 +6,263 @@
    "source": [
     "# 魔术方法\n",
     "\n",
-    "魔术方法（Magic Methods）是一组特殊的方法，它们以双下划线（`__`）开头和结尾。这些方法可以在类中定义，用于实现对象的特定行为和操作。\n"
+    "魔术方法（Magic methods）是具有双下划线（`__`）前缀和后缀的特殊方法。它们用于实现对象的特定行为和操作。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Any\n",
+    "\n",
+    "\n",
+    "class MyClass:\n",
+    "    # 类方法，创建并返回一个新对象实例\n",
+    "    def __new__(cls, *args, **kwargs):\n",
+    "        # 调用父类的__new__方法来创建对象实例\n",
+    "        instance = super().__new__(cls)\n",
+    "        return instance\n",
+    "\n",
+    "    # 新对象初始化操作\n",
+    "    def __init__(self, instance_attribute):\n",
+    "        self.instance_attribute = instance_attribute\n",
+    "\n",
+    "    # 用于返回对象的人类可读的字符串表示形式。它定义了对象的\"非正式\"字符串表示形式，通常用于用户友好的输出和显示。\n",
+    "    # 当使用方法 str、print 或使用 f-string 格式化时，对象的 __str__ 方法会被自动调用\n",
+    "    # 如果没有定义 __str__，会尝试调用 __repr__\n",
+    "    def __str__(self):\n",
+    "        return f\"MyClass(instance_attribute='{self.instance_attribute}')\"\n",
+    "\n",
+    "    # 提供一个可读性良好且准确描述对象的字符串，通常用于调试和开发过程中。\n",
+    "    # 当使用方法 repr 或在交互式环境中直接输入对象名并执行时，对象的 __repr__ 方法会被自动调用\n",
+    "    # 如果没有定义 __repr__，会尝试调用 __str__\n",
+    "    def __repr__(self):\n",
+    "        return f\"MyClass('{self.instance_attribute}')\"\n",
+    "\n",
+    "    # 用于使对象可以像函数一样被调用\n",
+    "    def __call__(self, *args: Any, **kwds: Any) -> Any:\n",
+    "        return self.__str__()\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.instance_attribute)\n",
+    "\n",
+    "    # __add__\n",
+    "    # 定义对象的加法操作\n",
+    "    # 当两个 MyClass 对象相加时，把两对象属性拼接后重新生成新对象\n",
+    "    def __add__(self, other):\n",
+    "        if isinstance(other, MyClass):\n",
+    "            return MyClass(f\"{self.instance_attribute}{other.instance_attribute}\")\n",
+    "        else:\n",
+    "            raise TypeError(\"Unsupported operand type.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj1 = MyClass(\"实例属性 1\")\n",
+    "obj2 = MyClass(\"实例属性 2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MyClass(instance_attribute='实例属性 1')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 测试 __str__\n",
+    "\n",
+    "print(obj1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MyClass('实例属性 1')"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 测试 __repr__\n",
+    "\n",
+    "eval(repr(obj1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"MyClass(instance_attribute='实例属性 1')\""
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 测试 __call__\n",
+    "\n",
+    "obj1()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(obj1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MyClass('实例属性 1实例属性 2')"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 测试 __add__\n",
+    "\n",
+    "obj1 + obj2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 一些常用的魔术方法及功能\n"
+    "### 迭代器 & 可迭代对象\n",
+    "\n",
+    "有关[迭代器和可迭代对象]('./iterator_generator.ipynb')的魔术方法\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 对象创建和销毁相关：\n",
+    "### 类型转换相关\n",
     "\n",
-    "  - `__new__(cls, ...)`: 创建对象时调用的方法，用于创建并返回实例。\n",
-    "  - `__init__(self, ...)`: 初始化方法，用于对实例进行初始化操作。\n",
-    "  - `__del__(self)`: 对象销毁时调用的方法，用于执行清理操作。\n",
+    "- `__str__(self)`: 该方法用于返回对象的字符串表示形式，通常用于`str`函数和打印对象时的类型转换。\n",
+    "- `__repr__(self)`: 该方法用于返回对象的可打印字符串表示形式，通常用于`repr`函数和在交互式命令行中显示对象时的类型转换。\n",
+    "- `__int__(self)`: 该方法用于将对象转换为整数类型，通常用于`int`函数的类型转换。\n",
+    "- `__float__(self)`: 该方法用于将对象转换为浮点数类型，通常用于`float`函数的类型转换。\n",
+    "- `__bool__(self)`: 该方法用于将对象转换为布尔类型，通常用于`bool`函数和条件语句中的类型转换。\n",
     "\n",
-    "- 对象表示相关：\n",
+    "以下是一个示例代码，展示了如何使用这些类型转换魔术方法：\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "MyNumber(10)\n",
+      "10\n",
+      "10.0\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyNumber:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
     "\n",
-    "  - `__str__(self)`: 返回对象的字符串表示，通常在使用 `print(obj)` 或 `str(obj)` 时调用。\n",
-    "  - `__repr__(self)`: 返回对象的可打印字符串表示，通常在使用 `repr(obj)` 时调用。\n",
-    "  - `__format__(self, format_spec)`: 控制对象的格式化输出。\n",
+    "    def __str__(self):\n",
+    "        return str(self.value)\n",
     "\n",
-    "- 属性访问相关：\n",
+    "    def __repr__(self):\n",
+    "        return f\"MyNumber({self.value})\"\n",
     "\n",
-    "  - `__getattr__(self, name)`: 访问不存在属性时调用的方法。\n",
-    "  - `__getattribute__(self, name)`: 访问对象属性时调用的方法，比 `__getattr__` 更早调用。\n",
-    "  - `__setattr__(self, name, value)`: 对象属性赋值时调用的方法。\n",
-    "  - `__delattr__(self, name)`: 删除对象属性时调用的方法。\n",
+    "    def __int__(self):\n",
+    "        return int(self.value)\n",
     "\n",
-    "- 容器类型相关：\n",
+    "    def __float__(self):\n",
+    "        return float(self.value)\n",
     "\n",
-    "  - `__len__(self)`: 返回对象的长度，通常在使用 `len(obj)` 时调用。\n",
-    "  - `__getitem__(self, key)`: 对象通过索引访问元素时调用的方法。\n",
-    "  - `__setitem__(self, key, value)`: 对象通过索引设置元素值时调用的方法。\n",
-    "  - `__delitem__(self, key)`: 对象通过索引删除元素时调用的方法。\n",
-    "  - `__iter__(self)`: 返回一个迭代器对象，用于支持对象的迭代。\n",
-    "  - `__next__(self)`: 返回迭代器的下一个元素。\n",
-    "  - `__contains__(self, item)`: 判断对象是否包含指定元素，通常在使用 `in` 运算符时调用。\n",
+    "    def __bool__(self):\n",
+    "        return bool(self.value)\n",
     "\n",
-    "- 比较和排序相关：\n",
     "\n",
-    "  - `__eq__(self, other)`: 定义对象的相等比较操作，使得对象可以使用 `==` 运算符进行比较。\n",
-    "  - `__ne__(self, other)`: 定义对象的不等比较操作，使得对象可以使用 `!=` 运算符进行比较。\n",
-    "  - `__lt__(self, other)`: 定义对象的小于比较操作，使得对象可以使用 `<` 运算符进行比较。\n",
-    "  - `__gt__(self, other)`: 定义对象的大于比较操作，使得对象可以使用 `>` 运算符进行比较。\n",
-    "  - `__le__(self, other)`: 定义对象的小于等于比较操作，使得对象可以使用 `<=` 运算符进行比较。\n",
-    "  - `__ge__(self, other)`: 定义对象的大于等于比较操作，使得对象可以使用 `>=` 运算符进行比较。\n",
-    "  - `__hash__(self)`: 返回对象的哈希值。\n",
+    "num = MyNumber(10)\n",
     "\n",
-    "- 调用相关：\n",
-    "\n",
-    "  - `__call__(self, ...)`: 将对象当作函数进行调用时调用的方法。\n",
-    "\n",
-    "- 上下文管理相关：\n",
-    "\n",
-    "  - `__enter__(self)`, `__exit__(self, exc_type, exc_value, traceback)`: 定义对象在上下文管理器中的行为，允许使用 `with` 语句管理资源。\n"
+    "# 调用类型转换方法\n",
+    "print(str(num))  # 输出：'10'\n",
+    "print(repr(num))  # 输出：MyNumber(10)\n",
+    "print(int(num))  # 输出：10\n",
+    "print(float(num))  # 输出：10.0\n",
+    "print(bool(num))  # 输出：True"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
