--- a/src/python3_course_for_devs/notebooks/class.ipynb
+++ b/src/python3_course_for_devs/notebooks/class.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,51 +61,21 @@
     "    # 无法直接访问类属性，因为静态方法并不接收类对象参数\n",
     "    @staticmethod\n",
     "    def static_method():\n",
-    "        print(\"静态方法\")\n",
-    "\n",
-    "    # __str__\n",
-    "    # 定义对象的字符串表示形式\n",
-    "    # 当使用方法 str、print 或使用 f-string 格式化时，对象的 __str__ 方法会被自动调用\n",
-    "    # 如果没有定义 __str__，会尝试调用 __repr__\n",
-    "    def __str__(self):\n",
-    "        return f\"MyClass(instance_attribute='{self.instance_attribute}')\"\n",
-    "\n",
-    "    # __repr__\n",
-    "    # 当使用方法 repr 或在交互式环境中直接输入对象名并执行时，对象的 __repr__ 方法会被自动调用\n",
-    "    # 如果没有定义 __repr__，会尝试调用 __str__\n",
-    "    def __repr__(self):\n",
-    "        return f\"MyClass('{self.instance_attribute}')\"\n",
-    "\n",
-    "    # __add__\n",
-    "    # 定义对象的加法操作\n",
-    "    # 当两个 MyClass 对象相加时，把两对象属性拼接后重新生成新对象\n",
-    "    def __add__(self, other):\n",
-    "        if isinstance(other, MyClass):\n",
-    "            return MyClass(f\"{self.instance_attribute}{other.instance_attribute}\")\n",
-    "        else:\n",
-    "            raise TypeError(\"Unsupported operand type.\")"
+    "        print(\"静态方法\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MyClass(instance_attribute='实例属性 1')\n",
-      "类公共属性\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "MyClass('实例属性 1')"
+       "'类公共属性'"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,34 +84,12 @@
     "obj1 = MyClass(\"实例属性 1\")\n",
     "obj2 = MyClass(\"实例属性 2\")\n",
     "\n",
-    "print(obj1)  # 字符串表示\n",
-    "print(obj1.public_attribute)  # 访问类属性\n",
-    "\n",
-    "eval(repr(obj1))"
+    "obj1.public_attribute  # 访问类属性"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MyClass(instance_attribute='实例属性 1实例属性 2')\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 自定义加法\n",
-    "obj3 = obj1 + obj2\n",
-    "print(obj3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
