--- a/src/python3_course_for_devs/notebooks/var.ipynb
+++ b/src/python3_course_for_devs/notebooks/var.ipynb
@@ -6,39 +6,50 @@
    "source": [
     "# 变量\n",
     "\n",
-    "变量没有类型，它仅仅是一个对象的引用，用于访问和操作对象\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 定义一个变量\n"
+    "在 Python 中，变量是用于存储数据值的标识符。它可以是任何数据类型的容器。当你创建一个变量时，你实际上在内存中分配了一块空间来存储该变量的值。\n",
+    "\n",
+    "Python 中的变量具有动态类型，这意味着你可以在任何时候将一个变量指定为不同的数据类型。你可以使用赋值操作符（`=`）来创建变量并为其赋值。例如：\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 定义一个变量 x，就这样，甚至都不需要声明\n",
+    "# 只需这样，我就定义了一个变量 x，值是 1\n",
     "x = 1\n",
     "\n",
-    "# 给变量 x 重新赋值\n",
-    "x = 2"
+    "# 给 x 重新赋值\n",
+    "x = \"foo\"\n",
+    "\n",
+    "# 此时 x 变为字符串类型\n",
+    "type(x)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 定义一个常量\n"
+    "## 如何定义常量？\n",
+    "\n",
+    "其实 Python 中并没有常量的概念，但可以使用全大写命名法来约定一个变量为常量\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -47,14 +58,12 @@
        "'bar'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 其实 python 中并没有常量，但可以使用全大写命名法来约定一个变量为常量\n",
-    "\n",
     "BAR = \"bar\"  # 这样，我们就会知道 BAR 应该被作为常量使用\n",
     "\n",
     "BAR = \"foo\"  # 但是 BAR 其实仍然可以被改变，因为本质上它还是一个变量\n",
@@ -75,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
