--- a/src/python3_course_for_devs/notebooks/var.ipynb
+++ b/src/python3_course_for_devs/notebooks/var.ipynb
@@ -6,35 +6,50 @@
    "source": [
     "# 变量\n",
     "\n",
-    "在 Python 中，变量是用于存储数据值的标识符。它可以是任何数据类型的容器。当你创建一个变量时，你实际上在内存中分配了一块空间来存储该变量的值。\n",
+    "变量是用于存储和引用数据值的标识符或名称。\n",
     "\n",
-    "Python 中的变量具有动态类型，这意味着你可以在任何时候将一个变量指定为不同的数据类型。你可以使用赋值操作符（`=`）来创建变量并为其赋值。例如：\n"
+    "变量具有动态类型，这意味着你可以在任何时候将一个变量指定为不同的数据类型。你可以使用赋值操作符（`=`）来创建变量并为其赋值。例如：\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 定义变量\n",
+    "\n",
+    "定义变量可以通过类型注解或类型推导两种方式来指定变量的类型。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 类型推导\n",
+    "\n",
+    "类型推导即根据变量赋值的值自动推断变量的类型。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "str"
+       "int"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 只需这样，我就定义了一个变量 x，值是 1\n",
+    "# 定义变量 x，值是 1\n",
     "x = 1\n",
     "\n",
-    "# 给 x 重新赋值\n",
-    "x = \"foo\"\n",
-    "\n",
-    "# 此时 x 变为字符串类型\n",
+    "# 类型推导得到 x 的类型为整数类型\n",
     "type(x)"
    ]
   },
@@ -42,91 +57,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 如何定义常量？\n",
+    "### 类型注解\n",
     "\n",
-    "其实 Python 中并没有常量的概念，但可以使用全大写命名法来约定一个变量为常量\n"
+    "使用类型注解，你可以在变量名后面使用冒号（`:`）来显式指定变量的类型。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'bar'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "BAR = \"bar\"  # 这样，我们就会知道 BAR 应该被作为常量使用\n",
-    "\n",
-    "BAR = \"foo\"  # 但是 BAR 其实仍然可以被改变，因为本质上它还是一个变量\n",
-    "\n",
-    "# 那如何才能声明一个无法被修改的常量？\n",
-    "\n",
-    "# 可以通过枚举实现\n",
-    "from enum import Enum\n",
-    "\n",
-    "\n",
-    "class Constants(Enum):\n",
-    "    BAR = \"bar\"\n",
-    "\n",
-    "\n",
-    "# 这样我们就变相的获得了一个无法被修改的常量\n",
-    "Constants.BAR.value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 多个变量赋值\n",
-    "\n",
-    "x, y, z = 1, 2, 3\n",
-    "\n",
-    "m = n = 5"
+    "# 定义变量 y，指定它为字符串类型，并设置初始值 'foo'\n",
+    "y: str = \"foo\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 删除一个变量的引用\n"
+    "## 命名规范\n",
+    "\n",
+    "变量名开头使用字母或者下划线，其余部分由字母、数字或下划线组成，字母大小写敏感。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# del 操作会删除变量的引用，当变量的引用计数变为 0，那么 python 的垃圾回收机制就会回收变量所占用的内存\n",
-    "var = \"foo\"\n",
-    "del var"
+    "foo_bar_01 = \"foo bar\"\n",
+    "\n",
+    "# 中文也可以用作变量名，但不要这么做\n",
+    "使用中文作为变量名 = \"不，不要这样\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 命名规范\n",
+    "### 关键字\n",
     "\n",
-    "变量名开头使用字母或者下划线，其余部分由字母、数字或下划线组成，字母大小写敏感\n",
-    "\n",
-    "其实中文现在也可以用作变量名，但非常不建议这么做\n"
+    "下面这些保留字不可以作为变量名。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -138,14 +116,89 @@
     }
    ],
    "source": [
-    "foo_bar_01 = \"foo bar\"  # 声明一个变量\n",
-    "\n",
-    "使用中文作为变量名 = \"不，不要这样\"  # 这样可以，但完全不建议\n",
-    "\n",
     "import keyword\n",
     "\n",
-    "# 还有就是下面这些保留字，不要用他们作为变量名\n",
     "print(keyword.kwlist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 变量赋值\n",
+    "\n",
+    "由于 Python 是动态类型语言，因此同一个变量可以在程序中引用不同类型的值。\n",
+    "\n",
+    "> 注意：\n",
+    "> 在类型注解中指定的类型只是一种提示，它并不限制变量的实际类型。因此，通过类型注解过的变量仍然可以在后续被修改为不同的类型。\n",
+    "\n",
+    "下面的例子我通过 [元组解包]('./tuple.ipynb') 的方式将变量 `x` 和 `y` 的值进行了互换。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "foo 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 此时 x 和 y 的类型也互换了\n",
+    "x, y = y, x\n",
+    "\n",
+    "print(x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 定义常量\n",
+    "\n",
+    "在 Python 中，没有严格的常量的概念，也没有内置的机制来定义不可更改的常量。Python 约定使用全大写字母的变量名来表示常量，并将其视为不应该被修改的值。这是一种约定，而不是强制规则，因此仍然可以通过重新赋值来修改这些变量的值。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PI 仅是约定的常量，实际上它仍是变量\n",
+    "PI = 3.14\n",
+    "\n",
+    "PI = 3.1415"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 通过代码提示来提醒开发者这是一个常量\n",
+    "\n",
+    "pylance 是一个支持类型提示的 vscode 编辑器插件，它可以根据类型注释提供代码补全和类型检查等功能。\n",
+    "\n",
+    "`typing` 模块中的 `Final` 用于注释一个变量为“最终”（final）变量，表明该变量的值在定义之后不应再被修改。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Final\n",
+    "\n",
+    "MAX_VALUE: Final[int] = 99\n",
+    "\n",
+    "# pylance 不支持 Jupyter 代码片段，因此下面的测试代码不会按照预期进行错误提示\n",
+    "MAX_VALUE = \"999\"  # \"MAX_VALUE\"声明为 Final，无法重新分配"
    ]
   }
  ],
