--- a/src/python3_course_for_devs/notebooks/types.ipynb
+++ b/src/python3_course_for_devs/notebooks/types.ipynb
@@ -6,38 +6,52 @@
             "source": [
                 "# 数据类型\n",
                 "\n",
-                "标准数据类型：\n",
+                "Python 中标准数据类型包括数字类型、布尔型、字符串、元组、列表、集合、字典以及一个特殊的类型 `NoneType`。\n",
+                "\n",
+                "按照数据的组织方式我们可以把它们分为两类：\n",
+                "\n",
+                "1. 基本类型：表示单个值的数据类型\n",
                 "\n",
                 "- 数字类型\n",
-                "  - int 整型\n",
-                "  - float 浮点型\n",
-                "  - complex 复数类型\n",
-                "- str 字符串\n",
-                "- tuple 元组\n",
-                "- list 列表\n",
-                "- set 集合\n",
-                "- dict 字典\n"
+                "- 布尔型\n",
+                "- 字符串\n",
+                "\n",
+                "2. 容器类型：表示容纳多个值的数据类型\n",
+                "\n",
+                "- 列表\n",
+                "- 集合\n",
+                "- 字典\n",
+                "- 元组\n",
+                "\n",
+                "基本类型都是单个值，它们在内存有固定的地址，你无法在同一个地址上对原值进行修改，因此基本类型都是不可变值。\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "对了，类型 `NoneType` 我们差点忘了说，其实它只有一个对象 `None`，代表空值。\n"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
                     "data": {
                         "text/plain": [
-                            "str"
+                            "NoneType"
                         ]
                     },
-                    "execution_count": 7,
+                    "execution_count": 3,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
-                "# 可通过 type 方法查看数据类型\n",
-                "type(\"nihao\")"
+                "# 使用 type 方法可以查看一个对象的类型\n",
+                "type(None)"
             ]
         },
         {
