--- a/src/python3_course_for_devs/notebooks/var.ipynb
+++ b/src/python3_course_for_devs/notebooks/var.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 变量\n",
     "\n",
-    "变量是用于存储和引用数据值的标识符或名称。\n"
+    "变量是用于存储和引用数据值的标识符。\n"
    ]
   },
   {
@@ -47,7 +47,7 @@
     "# 定义变量 x，值是 1\n",
     "x = 1\n",
     "\n",
-    "# 类型推导得到 x 的类型为整数类型\n",
+    "# 推导出 x 的类型为整型\n",
     "type(x)"
    ]
   },
@@ -76,7 +76,7 @@
    "source": [
     "## 命名规范\n",
     "\n",
-    "变量名开头使用字母或者下划线，其余部分由字母、数字或下划线组成，字母大小写敏感。\n"
+    "变量名开头使用字母或下划线，其余部分由字母、数字或下划线组成，字母大小写敏感。例如：\n"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "source": [
     "### 关键字\n",
     "\n",
-    "下面这些保留字不可以作为变量名。\n"
+    "下面这些保留字不能作为变量名。\n"
    ]
   },
   {
@@ -125,12 +125,12 @@
    "source": [
     "## 变量赋值\n",
     "\n",
-    "由于 Python 是动态类型语言，因此同一个变量可以在程序中引用不同类型的值。\n",
+    "由于 Python 是动态类型语言，因此同一个变量可以引用不同类型的值。\n",
     "\n",
     "> 注意：\n",
     "> 在类型注解中指定的类型只是一种提示，它并不限制变量的实际类型。因此，通过类型注解过的变量仍然可以在后续被修改为不同的类型。\n",
     "\n",
-    "下面的例子我通过 [元组解包]('./tuple.ipynb') 的方式将变量 `x` 和 `y` 的值进行了互换。\n"
+    "下面我通过 [元组解包]('./tuple.ipynb') 的方式将变量 `x` 和 `y` 的值进行了互换。\n"
    ]
   },
   {
@@ -147,7 +147,7 @@
     }
    ],
    "source": [
-    "# 此时 x 和 y 的类型也互换了\n",
+    "# 此时 y 的类型也改变了\n",
     "x, y = y, x\n",
     "\n",
     "print(x, y)"
@@ -178,11 +178,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 通过代码提示来提醒开发者这是一个常量\n",
+    "### 通过工具声明常量\n",
     "\n",
-    "pylance 是一个支持类型提示的 vscode 编辑器插件，它可以根据类型注释提供代码补全和类型检查等功能。\n",
+    "pylance 是一款支持类型检查的 vscode 编辑器插件，它可以根据类型注释提供代码补全和类型检查等功能。\n",
     "\n",
-    "`typing` 模块中的 `Final` 用于注释一个变量为“最终”（final）变量，表明该变量的值在定义之后不应再被修改。\n"
+    "`typing` 模块中的类型提示符 `Final` 用于声明一个变量为“最终”（final）变量，表明该变量的值在定义之后不应再被修改。\n",
+    "\n",
+    "当你尝试改变一个被声明为 `Final` 的变量的类型时，pylance 会进行错误提示，告诉你变量无法重新分配。\n",
+    "\n",
+    "注意：\n",
+    "\n",
+    "`Final` 依然不能真正阻止变量的修改，它依然只是一种约定和提示。但类型提示工具可以根据这些注释提供静态类型检查和代码补全等功能，这足够帮助我们避免一些常见的错误。\n"
    ]
   },
   {
@@ -195,8 +201,7 @@
     "\n",
     "MAX_VALUE: Final[int] = 99\n",
     "\n",
-    "# pylance 不支持 Jupyter 代码片段，因此下面的测试代码不会按照预期进行错误提示\n",
-    "MAX_VALUE = \"999\"  # \"MAX_VALUE\"声明为 Final，无法重新分配"
+    "# MAX_VALUE = \"999\""
    ]
   }
  ],
