--- a/src/python3_course_for_devs/notebooks/types.ipynb
+++ b/src/python3_course_for_devs/notebooks/types.ipynb
@@ -6,7 +6,9 @@
             "source": [
                 "# 数据类型\n",
                 "\n",
-                "Python 中标准数据类型包括数字类型、布尔型、字符串、元组、列表、集合、字典以及一个特殊的类型 `NoneType`。\n",
+                "Python 中标准数据类型包括数字类型、布尔型（`bool`）、字符串（`str`）、元组（`tuple`）、列表（`list`）、集合（`set`）、字典（`dict`）以及一个特殊的类型 `NoneType`。\n",
+                "\n",
+                "其中数字类型包括整型（`int`），浮点型（`float`）和复数类型（`complex`）。\n",
                 "\n",
                 "按照数据的组织方式我们可以把它们分为两类：\n",
                 "\n",
@@ -52,6 +54,20 @@
             "source": [
                 "# 使用 type 方法可以查看一个对象的类型\n",
                 "type(None)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### 基本类型\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "###\n"
             ]
         },
         {
