--- a/src/python3_course_for_devs/notebooks/types.ipynb
+++ b/src/python3_course_for_devs/notebooks/types.ipynb
@@ -4,35 +4,22 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# 数据类型\n",
+                "# 数据特性\n",
                 "\n",
-                "Python 中标准数据类型包括数字类型、布尔型（`bool`）、字符串（`str`）、元组（`tuple`）、列表（`list`）、集合（`set`）、字典（`dict`）以及一个特殊的类型 `NoneType`。\n",
-                "\n",
-                "其中数字类型包括整型（`int`），浮点型（`float`）和复数类型（`complex`）。\n",
-                "\n",
-                "按照数据的组织方式我们可以把它们分为两类：\n",
-                "\n",
-                "1. 基本类型：表示单个值的数据类型\n",
-                "\n",
-                "- 数字类型\n",
-                "- 布尔型\n",
-                "- 字符串\n",
-                "\n",
-                "2. 容器类型：表示容纳多个值的数据类型\n",
-                "\n",
-                "- 列表\n",
-                "- 集合\n",
-                "- 字典\n",
-                "- 元组\n",
-                "\n",
-                "基本类型都是单个值，它们在内存有固定的地址，你无法在同一个地址上对原值进行修改，因此基本类型都是不可变值。\n"
+                "数据特性是指数据本身的属性或特点。\n"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "对了，类型 `NoneType` 我们差点忘了说，其实它只有一个对象 `None`，代表空值。\n"
+                "## 数据类型\n",
+                "\n",
+                "Python 中标准数据类型包括数字类型、布尔型（`bool`）、字符串（`str`）、元组（`tuple`）、列表（`list`）、集合（`set`）、字典（`dict`）以及一个特殊的类型 `NoneType`。\n",
+                "\n",
+                "数字类型是由整型（`int`），浮点型（`float`）和复数类型（`complex`）组成的。\n",
+                "\n",
+                "`NoneType` 类型只有一个对象 `None`，代表空值。\n"
             ]
         },
         {
@@ -60,14 +47,95 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### 基本类型\n"
+                "### 容器类型\n",
+                "\n",
+                "容器类型是可容纳多个元素的对象的类型。\n"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "###\n"
+                "### 可变类型与不可变类型\n",
+                "\n",
+                "可变类型是指在创建后可以修改其值的数据类型。这意味着可以通过方法或操作来改变对象的状态，而不需要创建一个新的对象。常见的可变类型包括：\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### 可哈希性\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 可迭代性\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 可比较性\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 可调用性\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 可索引性\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 可切片性\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 可追加性\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 可序列化性\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 可拷贝性\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 可回收性\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 容器性\n"
             ]
         },
         {
@@ -255,6 +323,18 @@
                 "- 元素计数：使用 `count` 函数统计序列中指定元素的出现次数。\n",
                 "\n",
                 "  x 中数字 3 出现的次数：`x.count(3)`\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "2. 容器类型：表示容纳多个值的数据类型\n",
+                "\n",
+                "- 列表\n",
+                "- 集合\n",
+                "- 字典\n",
+                "- 元组\n"
             ]
         }
     ],
