--- a/src/python3_course_for_devs/notebooks/var.ipynb
+++ b/src/python3_course_for_devs/notebooks/var.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "int"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -125,24 +125,24 @@
    "source": [
     "## 变量赋值\n",
     "\n",
-    "由于 Python 是动态类型语言，因此同一个变量可以引用不同类型的值。\n",
+    "由于 Python 是动态类型语言，变量的类型可以在运行时根据赋值改变。\n",
     "\n",
-    "> 注意：\n",
     "> 在类型注解中指定的类型只是一种提示，它并不限制变量的实际类型。因此，通过类型注解过的变量仍然可以在后续被修改为不同的类型。\n",
     "\n",
-    "下面我通过 [元组解包]('./tuple.ipynb') 的方式将变量 `x` 和 `y` 的值进行了互换。\n"
+    "下面我通过 [元组解包]('./tuple.ipynb') 的方式将上面的变量 `x` 和 `y` 的值进行了互换。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "foo 1\n"
+      "foo 1\n",
+      "<class 'str'> <class 'int'>\n"
      ]
     }
    ],
@@ -150,7 +150,23 @@
     "# 此时 y 的类型也改变了\n",
     "x, y = y, x\n",
     "\n",
-    "print(x, y)"
+    "print(x, y)\n",
+    "print(type(x), type(y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 类型转换\n",
+    "\n",
+    "Python 不仅是动态类型语言，还是强类型语言，变量的类型转换必须显式进行。\n",
+    "\n",
+    "显式类型转换是通过内置的类型转换函数实现的。\n",
+    "\n",
+    "比如：`int`、`float`、`complex`、`bool`、`str`、`list`、`tuple` 和 `set`，其中部分方法不仅能转换类型，还能构建类型。\n",
+    "\n",
+    "这些方法的具体使用在 [标椎数据类型和特性]('./types.ipynb') 和各个数据类型独立章节。\n"
    ]
   },
   {
@@ -164,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
