--- a/src/python3_course_for_devs/notebooks/Iterator_generator.ipynb
+++ b/src/python3_course_for_devs/notebooks/Iterator_generator.ipynb
@@ -115,8 +115,11 @@
    "source": [
     "## 可迭代对象\n",
     "\n",
-    "可迭代对象是指内部实现了迭代器协议的对象。迭代器协议要求对象提供 `__iter__` 方法，该方法返回一个迭代器对象。\n",
-    "`iter` 方法可通过调用 `__iter__` 返回可迭代对象的迭代器对象。\n"
+    "可迭代对象是指内部实现了迭代器协议的对象。\n",
+    "\n",
+    "迭代器协议要求对象提供 `__iter__` 方法，该方法返回一个迭代器对象。\n",
+    "\n",
+    "> 内置方法 `iter` 通过调用 `__iter__` 返回可迭代对象的迭代器对象。\n"
    ]
   },
   {
