--- a/src/python3_course_for_devs/notebooks/dict.ipynb
+++ b/src/python3_course_for_devs/notebooks/dict.ipynb
@@ -328,6 +328,15 @@
    "source": [
     "d.popitem()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hash((1)) == hash(1)"
+   ]
   }
  ],
  "metadata": {
