--- a/src/python3_course_for_devs/notebooks/types.ipynb
+++ b/src/python3_course_for_devs/notebooks/types.ipynb
@@ -24,7 +24,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 50,
             "metadata": {},
             "outputs": [
                 {
@@ -33,7 +33,7 @@
                             "NoneType"
                         ]
                     },
-                    "execution_count": 3,
+                    "execution_count": 50,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -47,32 +47,134 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### 容器类型\n",
+                "## 容器类型\n",
                 "\n",
-                "容器类型是可容纳多个元素的对象的类型。\n"
+                "容器类型是可容纳多个元素的对象的数据类型。包括：元组、列表、集合、字典。\n"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### 可变类型与不可变类型\n",
+                "### 可变与不可变类型\n",
                 "\n",
-                "可变类型是指在创建后可以修改其值的数据类型。这意味着可以通过方法或操作来改变对象的状态，而不需要创建一个新的对象。常见的可变类型包括：\n"
+                "可变类型对象可以在原内存地址上进行就地修改，而不需要重新分配内存。包括：列表、集合、字典。\n",
+                "\n",
+                "不可变类型的对象保持着固定的值，无法通过任何操作来改变其状态。包括：数字、字符串、元组。\n",
+                "\n",
+                "> 可通过 `id` 方法获得对象的内存标识符。\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 51,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "4531659648\n",
+                        "4531659648\n"
+                    ]
+                }
+            ],
+            "source": [
+                "# 列表变量 b 在原内存地址上进行了元素增加操作\n",
+                "b = []\n",
+                "\n",
+                "print(id(b))\n",
+                "\n",
+                "b.append(1)\n",
+                "\n",
+                "print(id(b))"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### 可哈希性\n"
+                "### 可哈希类型\n",
+                "\n",
+                "可哈希类型是指那些在其生命周期中状态保持不变的对象类型。生命周期指的是对象存在的时间段，从对象的创建到销毁的整个过程。\n",
+                "\n",
+                "简单来说，可哈希类型对象从创建到销毁都是不可变的。显然，不可变类型数据都是可哈希的。\n",
+                "\n",
+                "> 可通过 `hash` 方法获取可哈希对象的哈希值。\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 52,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "6994225863741334623"
+                        ]
+                    },
+                    "execution_count": 52,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "hash(\"foo\")"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## 可迭代性\n"
+                "#### 自定义可哈希对象类\n",
+                "\n",
+                "> 内置方法 `repr` 用于返回一个对象的字符串表示形式。\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 59,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "-4484763301684064448"
+                        ]
+                    },
+                    "execution_count": 59,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "class CustomHashable:\n",
+                "    def __init__(self, value):\n",
+                "        self.value = value\n",
+                "\n",
+                "    def __hash__(self):\n",
+                "        if self.value.__hash__:\n",
+                "            return self.value.__hash__()\n",
+                "        else:\n",
+                "            # 方法 hash 只接收不可变类型，因此把 value 转为字符串\n",
+                "            return hash(repr(self.value))\n",
+                "\n",
+                "\n",
+                "obj = CustomHashable([1, 2, 3])\n",
+                "\n",
+                "hash(obj)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## 可迭代类型\n",
+                "\n",
+                "可迭代类型是指可以使用迭代器进行遍历的对象。包括字符串、元组、列表、集合、字典。\n",
+                "\n",
+                "更多请看[迭代器 & 可迭代对象 & 生成器]('./iterator_generator.ipynb')\n"
             ]
         },
         {
@@ -160,15 +262,15 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 27,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "4393962544\n",
-                        "4398874752\n"
+                        "4545875632\n",
+                        "4545575744\n"
                     ]
                 }
             ],
@@ -185,15 +287,15 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 29,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "4398595584\n",
-                        "4398595584\n"
+                        "4538511360\n",
+                        "4538511360\n"
                     ]
                 }
             ],
